adding admin getUsers method
